--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,6 +1,6 @@
 # My properties
 userName=Andrii Illiashenko
 version=1.0.0
-numberOfProducts=50000
+numberOfProducts=1000000
 category="Electronics"
 uri=mongodb+srv://admin:admin@cluster0.va5tgex.mongodb.net/?retryWrites=true&w=majority
